<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BottomNavFragment">

    <TextView
        android:id="@+id/features"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Features"
        android:textSize="22sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint1"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/features">

        <ImageView
            android:id="@+id/liveshow"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/liveshow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/liveClassText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/liveShow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/liveshow" />

        <ImageView
            android:id="@+id/liveclass"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/liveclass"
            app:layout_constraintStart_toEndOf="@id/liveshow"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/liveClass"
            android:layout_marginStart="26dp"
            app:layout_constraintStart_toEndOf="@id/liveClassText"
            app:layout_constraintTop_toBottomOf="@id/liveclass" />

        <ImageView
            android:id="@+id/ecourse"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ecourse"
            app:layout_constraintEnd_toStartOf="@+id/community"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/liveClass"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toStartOf="@id/communityText"
            app:layout_constraintTop_toBottomOf="@id/ecourse" />

        <ImageView
            android:id="@+id/community"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/community"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.36" />

        <TextView
            android:id="@+id/communityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Community"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/liveclass" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint2"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint1">

        <ImageView
            android:id="@+id/myProfile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/myprofile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/myProfileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/myProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/myProfile" />

        <ImageView
            android:id="@+id/savedCourses"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/savedcourse"
            app:layout_constraintStart_toEndOf="@id/myProfile"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/savedCourse"
            android:layout_marginStart="14dp"
            app:layout_constraintStart_toEndOf="@id/myProfileText"
            app:layout_constraintTop_toBottomOf="@id/myProfile" />

        <ImageView
            android:id="@+id/recentCourse"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/recentcourses"
            app:layout_constraintEnd_toStartOf="@+id/myList"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/recentCourses"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toStartOf="@id/myListText"
            app:layout_constraintTop_toBottomOf="@id/recentCourse" />

        <ImageView
            android:id="@+id/myList"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/mylist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.36" />

        <TextView
            android:id="@+id/myListText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/myList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/savedCourses" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint2"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/myCart"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/mycart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/myCartText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/myCart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/myCart" />

        <ImageView
            android:id="@+id/purchaseHistory"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/purchasehistory"
            app:layout_constraintStart_toEndOf="@id/myCart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/purchaseHistoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/purchaseHistory"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@id/myCartText"
            app:layout_constraintTop_toBottomOf="@id/myCart" />

        <ImageView
            android:id="@+id/marketplace"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/marketplace"
            app:layout_constraintStart_toEndOf="@+id/purchaseHistory"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/marketplace"
            app:layout_constraintStart_toEndOf="@id/purchaseHistoryText"
            app:layout_constraintTop_toBottomOf="@id/marketplace" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>